objects/LoyaltyTransaction__c.object
<CustomObject>
    <description>Object to capture all transactions related to Accounts and Assets for Loyalty Club Personal</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Loyalty Transactions</relationshipLabel>
        <relationshipName>LoyaltyTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumo</fullName>
                </value>
                <value>
                    <fullName>Recarga de crédito</fullName>
                </value>
                <value>
                    <fullName>Puntos de bienvenidas</fullName>
                </value>
                <value>
                    <fullName>Contingencia</fullName>
                </value>
                <value>
                    <fullName>Encuesta Fest</fullName>
                </value>
                <value>
                    <fullName>Redención de puntos</fullName>
                </value>
                <value>
                    <fullName>Anulación de canjes</fullName>
                </value>
                <value>
                    <fullName>Ajustes manuales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsApprobed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approbed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoyaltyAccountCode__c</fullName>
        <label>Loyalty Account Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoyaltyAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loyalty Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loyalty Transactions</relationshipLabel>
        <relationshipName>LoyaltyTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessDate__c</fullName>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RevertedTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverted Transaction</label>
        <referenceTo>LoyaltyTransaction__c</referenceTo>
        <relationshipLabel>Loyalty Transactions</relationshipLabel>
        <relationshipName>LoyaltyTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reverted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <label>Transation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>Profile Completion</fullName>
                </value>
                <value>
                    <fullName>Punishment 3M</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Reward 3M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loyalty Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TransactionDate__c</columns>
        <columns>TransactionType__c</columns>
        <columns>Points__c</columns>
        <columns>Asset__c</columns>
        <columns>LoyaltyAccount__c</columns>
        <columns>Status__c</columns>
        <columns>Reverted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>